tests/array/tidx_lit_err3.nim
discard """
  errormsg: "array index too large"
  line: 5
"""
echo [high(int)-1: 1, 2, 3]
